--- a/src/style.css
+++ b/src/style.css
@@ -1,89 +1,169 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+body{
+	background-image: url('bg.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+.navbar{
+	padding: 10px;
+	left: 0;
+	right: 0;
+	margin-bottom: 50px;
+	background-color: rgba(0, 0, 0, 0.8);
+	box-shadow: 0 20px 40px rgba(225, 225, 225, 1);
+	height: 150px;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.navbar h1{
+	margin-bottom: 20px;
+	text-align: center;
+	color: whitesmoke;
+	font-family: monospace;
+	letter-spacing: 10px;
+	font-size: 40px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.navbar ul{
+	text-align: center;
+	list-style: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.navbar ul li{
+	display: inline-block;
+	margin-right: 20px;
+	font-size: 20px;
 }
 
-.card {
-  padding: 2em;
+.navbar ul li a{
+	text-decoration: none;
+	color: whitesmoke;
+	padding: 10px;
+	margin-right: 15px;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar a:hover{
+	cursor: pointer;
+	text-decoration: underline;
+	background-color: white;
+	color: black;
+	border-radius: 7px 10px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+
+
+.todo{
+	border: 2px solid white;
+	background-color: rgba(225, 225, 225, 0.4);
+	box-shadow: 10px 10px 20px grey;
+	margin: auto;
+	width: 500px;
+	padding: 25px;
+	border-radius: 10px;
+	border-color: gray;
+}
+
+.todo h3{
+	text-align: center;
+	margin-bottom: 30px;
+	font-weight: 300;
+}
+
+.todo li{
+	list-style: none;
+}
+
+.todo form{
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+.todo form input{
+	padding: 5px 10px;
+	background-color: rgba(220, 220, 220, 0.1);
+	outline: none;
+	border: none;
+	border-bottom: 2px solid black;
+	width: 60%;
+}
+
+.todo form input::placeholder{
+	color: black;
+}
+
+.todo form button{
+	margin-top: 5px;
+	margin-left: 20px;
+	padding: 5px;
+}
+
+.todo form button:hover{
+	cursor: pointer;
+}
+
+.todo ul {
+	margin-top: 30px;
+}
+
+
+.todo ul li{
+	text-align: right;
+	margin-top: 10px;
+}
+
+.todo ul li span{
+	float: left;
+}
+
+.todo ul li input{
+	margin-right: 10px;
+	width: 18px;
+	height: 18px;
+	display: inline-block;
+	cursor: pointer;
+}
+
+.todo ul li button{
+	display: inline-block;
+	width: 18px;
+	height: 18px;
+}
+
+.todo ul li button:hover{
+	cursor: pointer;
+}
+
+.todo .btn{
+	margin-left: 130px;
+	margin-top: 20px;
+	padding: 10px 20px;
+}
+
+.todo .btn:hover{
+	cursor: pointer;
+	background-color: black;
+	color: white;
+	transition: 0.5s;
+	border-radius: 10px;
+}
+
+.todo form button:hover{
+	cursor: pointer;
+	background-color: black;
+	color: white;
+	transition: 0.5s;
+	border-radius: 10px;
+}
+
+.todo .done {
+	text-decoration: line-through;
 }
